--- a/Accountants.html
+++ b/Accountants.html
@@ -5,13 +5,13 @@
 <body>    
     <div class="heading">Career Choices<br></div><br>
     <div class="question">
-        Are You Intrested In Giving Advice And Making Plans In Accountancy?
+        Are You Intrested In Jobs Related To Finance?
     </div>
     <div class="Yes">
-       <a href="Advice.html">Yes</a>
+       <a href="Finance.html">Yes</a>
     </div><br>
     <div class="No">
-       <a href='Not_Advice.html'>No</a>
+       <a href='Not_Finance.html'>No</a>
     </div><br>
 
     
