--- a/Commerce.html
+++ b/Commerce.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Career Test</title>
 </head>
 <body>    
-    <div class="heading">Career Choices<br></div><br>
+    <div class="heading">Career Choices<br></div>
     <div class="question">
-        Are You Intrested In Giving Advice And Making Plans In Accountancy?
+        Are You Intrested In Accountancy?
     </div>
     <div class="Yes">
-       <a href="Advice.html">Yes</a>
+       <a href="Accountants.html">Yes</a>
     </div><br>
     <div class="No">
-       <a href='Not_Advice.html'>No</a>
+       <a href='Not_Accountants.html'>No</a>
     </div><br>
 
     
