--- a/Accountants.html
+++ b/Accountants.html
@@ -5,9 +5,9 @@
 <body>    
     <div class="heading">Career Choices<br></div><br>
     <div class="question">
-        Are You Intrested In Jobs Related To Finance?
+        Are You Intrested In Jobs <br>Related To Finance?
     </div>
-    <div class="Yes">
+    <div class="Yes" style="margin-left: -300px;">
        <a href="Finance.html">Yes</a>
     </div><br>
     <div class="No">
