--- a/Advice.html
+++ b/Advice.html
@@ -7,8 +7,8 @@
 </head>
 <body>    
     <div class="heading">Career Choices<br></div>
-    <div class="question"><br>
-        You should choose:- Chartered Accountant <br>Personal Financial Advisor<br>Or<br>Cost Accountant as a Career
+    <div class="question" style="margin-left: 30px; margin-top: 10px;;"><br>
+        You should choose:- <br>Chartered Accountant <br>Personal Financial Advisor<br>Or<br>Cost Accountant<br> as a Career
     </div>
 </body>
 </html>
