--- a/Arts.html
+++ b/Arts.html
@@ -8,15 +8,14 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question">
-        Do You Like Drawing And Designing?
+        Do You Like Drawing And <br>Designing?
     </div>
-    <div class="Yes">
+    <div class="Yes" style="margin-left: -300px;">
        <a href="Designing.html">Yes</a>
     </div><br>
     <div class="No">
        <a href='Not_Designing.html'>No</a>
     </div><br>
-
     
 </body>
 </html>
