--- a/Commerce.html
+++ b/Commerce.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question">
-        Are You Intrested In Accountancy?
+        Are You Intrested In<br> Accountancy?
     </div>
     <div class="Yes">
        <a href="Accountants.html">Yes</a>
