--- a/Designing.html
+++ b/Designing.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question">
-        Are You Intrested In Fashion??
+        Are You Intrested <br>In Fashion?
     </div>
     <div class="Yes">
        <a href="Fashion.html">Yes</a>
