--- a/Finance.html
+++ b/Finance.html
@@ -7,8 +7,8 @@
 </head>
 <body>    
     <div class="heading">Career Choices<br></div>
-    <div class="question"><br>
-        You should choose:- Investment Banker<br>Or<br>Chartered Financial Analyst as a Career
+    <div class="question" style="margin-top: 0px;"><br>
+        You should choose:- <br>Investment Banker<br>Or<br>Chartered Financial Analyst <br>as a Career
     </div>
 </body>
 </html>
