--- a/Not_Accountants.html
+++ b/Not_Accountants.html
@@ -5,12 +5,12 @@
 <body>    
 <div class="heading">Career Choices<br></div><br>
 <div class="question">
-    Are You Intrested In Giving Advice And Making Plans In Accountancy?
+    Are You Intrested In<br> Giving Advice And <br>Making Plans In Accountancy?
 </div>
-<div class="Yes">
+<div class="Yes" style="margin-left: -400px; margin-top: 200px;">
    <a href="Advice.html">Yes</a>
 </div><br>
-<div class="No">
+<div class="No" style="margin-top: 200px;">
    <a href='Not_Advice.html'>No</a>
 </div><br>
 
