--- a/Not_Advice.html
+++ b/Not_Advice.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question"><br>
-        You should choose:- Professional Accountant <br>Or<br>Public Accountant as a Career
+        You should choose:- <br>Professional Accountant <br>Or<br>Public Accountant as a Career
     </div>
 </body>
 </html>
