--- a/Not_Blog.html
+++ b/Not_Blog.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div><br>
     <br><div class="question"><br>
-        You should choose:- Geologist<br>Forensic Pathologist<br>Surgeon<br>Or<br>Doctor as a Career
+        You should choose:- Astrophysicist<br>Or<br>Geologist as a Career
     </div>
 </body>
 </html>
