--- a/Not_Manager.html
+++ b/Not_Manager.html
@@ -7,8 +7,8 @@
 </head>
 <body>    
     <div class="heading">Career Choices<br></div>
-    <div class="question"><br>
-        You should choose:- Insurance Manager <br>Product manager<br>Or<br>Entrepreneur as a Career
+    <div class="question" style="margin-top: 20px;"><br>
+        You should choose:- <br>Insurance Manager <br>Product manager<br>Or<br>Entrepreneur as a Career
     </div>
 </body>
 </html>
