--- a/Not_Space.html
+++ b/Not_Space.html
@@ -10,11 +10,14 @@
     <div class="question" style="width: 500px;">
         Which attracts you more?
     </div><br>
-    <div class="Yes" style="margin-left: -300px;">
+    <div class="Yes" style="margin-left: -500px;">
        <a href='Office.html'>Office Job</a>
     </div><br>
     <div class="No" style="width: 300px;">
-        <a href="Research.html" >Research Job</a>
+        <a href="Not_Blog.html" >Research Job</a>
     </div><br>
+    <div class="No" style="width: 300px;">
+        <a href="Space-Research.html">Job in Space</a>
+    </div>
 </body>
 </html>
