--- a/Photography.html
+++ b/Photography.html
@@ -7,7 +7,7 @@
 </head>
 <body>    
     <div class="heading">Career Choices<br></div>
-    <div class="question"><br>
+    <div class="question" id='job'><br>
         You should choose:- Photography<br>Dance<br>Or<br>Acting as a Career
     </div>
 </body>
