--- a/Science.html
+++ b/Science.html
@@ -8,13 +8,13 @@
 <body>    
     <div class="heading">Career Choices<br></div><br>
     <div class="question" style="width: 500px;">
-        Do you like Space?
+        What are you more <br>interested in?
     </div><br>
     <div class="Yes" style="margin-left: -300px;">
-       <a href='Space.html'>Yes</a>
+       <a href='Space-Technology.html'>Medical</a>
     </div><br>
     <div class="No">
-        <a href="Not_Space.html">No</a>
+        <a href="Not_Space.html">Engineering</a>
     </div><br>
 </body>
 </html>
