--- a/Space-Research.html
+++ b/Space-Research.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question"><br>
-        You should choose become an Astrophysicist.
+        You should choose:- Astronaut<br>Or <br>Space Technician as a Career
     </div>
 </body>
 </html>
