--- a/Space-Technology.html
+++ b/Space-Technology.html
@@ -8,7 +8,7 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question"><br>
-        You should choose:- Spacetechnician<br>Or<br>Astronaut as a Career
+        You should choose:- Doctor<br>Forensic Pathologist<br>Or<br>Surgeon as a Career
     </div>
 </body>
 </html>
