--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <li><span>Conceptual Artist</span></li>
     </ul>
   </div>
+  
+
   <div class="start">
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br>
@@ -33,6 +35,12 @@
     <a href="Aptitude.html" class='word-test'>
       Aptitude Test
     </a>
+    <div class="talentHome">
+      Interested in Computer Programming<br>Visit <a href="https://www.talenthome.in"><i><u>Talent Home Solutions</u></i></a>
+    </div>
+    <div class="talentHome-2">
+      Cant decide which college to go to? <br>View our <a href="Colleges.html"><i><u>Top 10 college collection</u></i></a> for each field
+    </div>
   </div>
 </body>
 </html>
