--- a/Not_Designing.html
+++ b/Not_Designing.html
@@ -8,12 +8,12 @@
 <body>    
     <div class="heading">Career Choices<br></div>
     <div class="question">
-        Do You See Yourself Becoming A Manager In The Future?
+        Do You See Yourself<br> Becoming A <br>Manager In The Future?
     </div>
-    <div class="Yes">
+    <div class="Yes" style="margin-left: -300px; margin-top: 100px;">
        <a href="Manager.html">Yes</a>
     </div><br>
-    <div class="No">
+    <div class="No" style="margin-top: 100px;">
        <a href='Not_Manager.html'>No</a>
     </div><br>
 
